  * PHP: PROPERTY-NAMES now supports native objects.
  * PHP: HASHKEYS fixed for native arrays.
  * REMOVE-PROPERTY: New, non-destructive function.
  * PROPERTY-LIST has been renamed to PROPERTIES-LIST.
  * DEFCLASS fails on re-definitions or if a base class has
    not been defined.
  * FILTER functions aren't inlined anymore.  Caused nasty bugs.
  * JS: LENGTH: Works with objects.

Changes of tre-0.11 relative to tre-0.10:
  * Moved platform-specific functions into separate repositories
    'tre-php', 'tre-js' and 'tre-shared'.
  * Path/URI functions and READ-BINARY added to the environment.

Changes of tre-0.10 relative to tre-0.9:
  * PHP: DEFINED? and UNDEFINED? had reversed effects.
  * WITH-STRUCT: Most embarassing bug removed.  Did not
    introduce a GENSYM to evaluate the STRUCT's origin only
    once.

Changes of tre-0.9 relative to tre-0.8:
  * SLOT-VALUE can get and set by names passed as symbol or string,
    also by variable.
  * JSON obects must not be accessed like arrays. Use SLOT-VALUE instead
    of AREF.
  * PHP: TRANSPILER-CONFIGURATION :NATIVE-CODE holds a string of native code
         without opening or closing angle brackets to insert in the prologue.
  * PHP: GET-CURRENT-TIME has been replaced by MILLISECONDS-SINCE-1970.
  * PHP: JSON objects are treated as objects, not arrays.
  * PHP: NEW returns a stdClass.
  * JS: ATAN2: New math function.
  * CL: ASIN and ACOS added.

Changes of tre-0.8 relative to tre-0.7:
  * WITHOUT-HEAD, WITHOUT-TAIL: New functions.
  * PHP: AREF returns NIL for undefined indexes instead of breaking with an
         error message.

Changes of tre-0.7 relative to tre-0.6:
  * (%NEW): Accidentally converted to (%NEW NIL) – fixed.
  * PHP: Debugged property and associative array functions.
  * JS: Methods are also available as functions whose identifier is
        ($ class-name "-" method-name).

Changes of tre-0.6 relative to tre-0.5:
  * PHP: PROPERTY-NAMES fixed for associative arrays.